[gd_scene load_steps=7 format=3 uid="uid://63xjq4nv1uhx"]

[ext_resource type="Script" uid="uid://qw4nb3amsl6n" path="res://scripts/extract.gd" id="1_ewnjm"]
[ext_resource type="Texture2D" uid="uid://x6fee8su30kj" path="res://assets/ts1.png" id="1_h8knc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tgpx1"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb7el"]
atlas = ExtResource("1_h8knc")
region = Rect2(0, 16, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_en26u"]
atlas = ExtResource("1_h8knc")
region = Rect2(32, 16, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jcuge"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb7el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en26u")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="Extract" type="Area2D"]
z_index = 30
collision_layer = 16
collision_mask = 3
script = ExtResource("1_ewnjm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tgpx1")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jcuge")
autoplay = "default"
frame_progress = 0.754333

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
